Closed
Bug 919403
Opened 12 years ago
Closed 12 years ago
DocAccessible.cpp:77:29 [-Wreorder] field 'mScrollPositionChangedTicks' will be initialized after field 'mAccessibleCache'
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla27
Tracking | Status | |
---|---|---|
firefox25 | --- | unaffected |
firefox26 | --- | wontfix |
firefox27 | --- | fixed |
People
(Reporter: cpeterson, Assigned: cpeterson)
References
(Blocks 1 open bug)
Details
(Keywords: regression, Whiteboard: [qa-])
Attachments
(1 file)
1.28 KB,
patch
|
tbsaunde
:
review+
|
Details | Diff | Splinter Review |
This -Wreorder warning is a regression from bug 910989:
accessible/src/generic/DocAccessible.cpp:77:29 [-Wreorder] field 'mScrollPositionChangedTicks' will be initialized after field 'mAccessibleCache'
Attachment #808416 -
Flags: review?(surkov.alexander)
Updated•12 years ago
|
Attachment #808416 -
Flags: review?(surkov.alexander) → review+
Assignee | ||
Comment 1•12 years ago
|
||
Comment 2•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Updated•12 years ago
|
Whiteboard: [qa-]
You need to log in
before you can comment on or make changes to this bug.
Description
•