Bug 919403 - Fix warning about DocAccessible ctor's initialization order. r=tbsaunde